--- a/_posts/2019-09-17-diary.md
+++ b/_posts/2019-09-17-diary.md
@@ -12,7 +12,7 @@ authors:
 例えば、[にゅうライン](https://takym.github.io/nyuworld/nyuwline/)です。<br />
 このページではワールド全体の鉄道の情報が載っています。<br />
 数学部員さんも手伝ってくれました！<br />
-因みに路線図の画像はAkunさんが作ってくれました。<br />
+因みに路線図の画像はごまだれさんが作ってくれました。<br />
 他にも[Discord チャンネル一覧](https://takym.github.io/nyuworld/discord.html)というページも書きました。<br />
 チャンネルが増えてきたので説明したくなったので書きました。<br />
 元々このウィキを始めた理由は実はそれですが。<br />
@@ -23,7 +23,11 @@ authors:
 
 # 見出し
 ## 小見出し
-*斜体* **太字** <u>下線</u> [リンク(何処にも飛びません)]() [リンク(こっちはトップページに飛びます)](https://takym.github.io/nyuworld/README.html)
+*斜体*
+**太字**
+<u>下線</u>
+[リンク(何処にも飛びません)]()
+[リンク(こっちはトップページに飛びます)](https://takym.github.io/nyuworld/README.html)
 
 こんな感じの見た目です。<br />
 これらはMarkdownで以下の様に記述されています。
@@ -31,7 +35,11 @@ authors:
 ```markdown
 # 見出し
 ## 小見出し
-*斜体* **太字** <u>下線</u> [リンク(何処にも飛びません)]() [リンク(こっちはトップページに飛びます)](https://takym.github.io/nyuworld/README.html)
+*斜体*
+**太字**
+<u>下線</u>
+[リンク(何処にも飛びません)]()
+[リンク(こっちはトップページに飛びます)](https://takym.github.io/nyuworld/README.html)
 ```
 
 個人的に見出しより小見出しを使う事をお勧めします。<br />
