--- a/_posts/2019-09-18-bug.md
+++ b/_posts/2019-09-18-bug.md
@@ -10,11 +10,11 @@ authors:
 今日(2019/09/17 23:30～2019/09/18 00:00頃)に参加してみたら描画バグが発生しました。<br />
 サーバーも少し重くなっていました。<br />
 なので参考までにその時の画面を共有します。<br />
-<img src="bug00.png" width="600" /><br />
+<img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug00.png" width="600" /><br />
 埋まっている筈のチェストが見えます。<br />
-<img src="bug01.png" width="600" /><br />
+<img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug01.png" width="600" /><br />
 線路が途切れている様に見えますが、実際は続いています。<br />
-<img src="bug02.png" width="600" /><br />
+<img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug02.png" width="600" /><br />
 看板が浮いています。<br />
-<img src="bug03.png" width="600" /><br />
+<img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug03.png" width="600" /><br />
 海がえぐれて凄い事になっています。<br />
