描画バグ発生、追記

--- a/_posts/2019-09-18-bug.md
+++ b/_posts/2019-09-18-bug.md
@@ -18,3 +18,6 @@ authors:
 看板が浮いています。<br />
 <img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug03.png" width="600" /><br />
 海がえぐれて凄い事になっています。<br />
+## 追記
+サーバーに再接続してみても症状は治りませんでした。<br />
+また、遠い所に離れてみましたが再描画されませんでした。<br />
