記事の修正

--- a/_posts/2019-09-18-bug-again.md
+++ b/_posts/2019-09-18-bug-again.md
@@ -8,6 +8,7 @@ authors:
   - Takym
 ---
 14時頃にまた描画バグが発生しました。<br />
+場所は栗鳥駅の一つ手前の鉱坑平原駅あたりです。<br />
 その時の証拠の写真を載せます。<br />
 <img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug04.png" width="600" /><br />
 奈落の様に見えますが実際はそこにあるブロックが描画されていないだけです。<br />
