--- a/_posts/2019-09-18-bug-again.md
+++ b/_posts/2019-09-18-bug-again.md
@@ -15,3 +15,5 @@ authors:
 <img src="https://takym.github.io/nyuworld/articles/2019-09-18-bug05.png" width="600" /><br />
 洞窟とかも見えちゃっていますね。<br />
 クリエイティブで奈落までくり抜いても洞窟の中は見る事はできません。<br />
+## どうでもいい追記
+実は、2回とも海砂森雪線上で描画バグが発生しているんです。
